@@ -40,6 +40,7 @@ export(
     "CallableBond",
     "FittedBondCurve",
     ##--calendars.R
+    "calendars",
     "isBusinessDay", "businessDay",
     "isHoliday",
     "isWeekend",
@@ -121,4 +122,3 @@ S3method("print", "Bond")
 S3method("summary", "Bond")
 
 S3method("print", "FixedRateBond")
-
